<?xml version="1.0" encoding="utf-8"?>

<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:id="@+id/player_layout">
	
	<ImageView android:id="@+id/album_art"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_x="10dip" android:layout_y="10dip">
	</ImageView>
	<TextView android:text="@string/title_unknown"
		android:id="@+id/song_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_x="160dip" android:layout_y="40dip">
	</TextView>
	<TextView android:text="@string/artist_unknown"
		android:id="@+id/song_artist"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_x="160dip" android:layout_y="60dip">
	</TextView>
	<TextView android:text="@string/album_unknown"
		android:id="@+id/song_album"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_x="160dip" android:layout_y="80dip">
	</TextView>
	
	<ImageButton android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:src="@drawable/ic_media_previous"
		android:id="@+id/previous_button"
		android:layout_x="30dip" android:layout_y="160dip"></ImageButton>
		
	<ImageButton android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:src="@drawable/ic_media_play"
		android:id="@+id/play_button"
		android:layout_x="100dip" android:layout_y="160dip"></ImageButton>

	<ImageButton android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:src="@drawable/ic_media_next"
		android:id="@+id/next_button"
		android:layout_x="170dip" android:layout_y="160dip"></ImageButton>
		
</AbsoluteLayout>
